src/test/deca/codegen/valid/bibliothequeStandard/07getPI.deca
#include "Math.decah"

{
    Math m = new Math();

    println(m._getPI());     // 3.14159e+00
}
