src/test/deca/codegen/invalid/bibliothequeStandard/01powMaxValue.deca
#include "Math.decah"

{
    Math m = new Math();

    println(m._pow(m._getMaxValue(),5));    // Infinity (MAX_VALUE)
}
